Stream choice + get non-permalink URL

--- a/config.json.example
+++ b/config.json.example
@@ -1,4 +1,5 @@
 {
-    "api_key": "a34S1-nst3d-nrSAT-BP456-nasrt",
-    "ubicast_server": "https://ubicast.server.com/"
+    "api_key": "",
+    "cookie": "",
+    "ubicast_server": "https://rec.unil.ch/"
 }
